--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@ rel="stylesheet">
 <P>#preparação</P>
 </div>
 <div>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/5jq_kcNYzUo?si=7e-fLGP7mwlqVpwJ&quot;
-title="YouTube video player" frameborder="0"
+<iframe width="560" height="315" src="https://www.youtube.com/watch?v=8UqNVzY0EVg="YouTube video player" frameborder="0"
 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
@@ -44,17 +43,21 @@ Big Freeze (Grande Congelamento): A energia escura continuará acelerando a expa
 Big Crunch (Grande Colapso): Se a gravidade for forte o suficiente, ela poderia reverter a expansão e puxar tudo de volta para um único ponto. É o oposto do Big Bang.
 Big Rip (Grande Rasgo): Se a energia escura ficar forte demais, ela poderia rasgar não apenas galáxias, mas também estrelas, planetas e até mesmo átomos.
 Ainda não sabemos qual será o destino do nosso universo, mas a pesquisa continua e cada nova descoberta nos aproxima de uma resposta. Lembrem-se, o estudo do cosmos é uma jornada contínua, cheia de perguntas e maravilhas.</h2>
-<div class="categoria-videos">
-<a href="https://www.youtube.com/watch?v=E8g2c_bJesA"&gt;
-<img src="https://img.youtube.com/vi/E8g2c_bJesA/maxresdefault.jpg"&gt;
+<div >
+</section>
+<section class="categoria">
+    <h2> escolha seu conteudo </h2>
+    <div class="categoria-videos"
+<a href="https://www.youtube.com/watch?v=E8g2c_bJesA"&gt;></a>
+<img src="https://img.youtube.com/vi/E8g2c_bJesA/maxresdefault.jpg"&gt;>
 </a>
 
-<a href="https://www.youtube.com/watch?v=KzNRjcrXL6E"&gt;
-<img src="https://img.youtube.com/vi/KzNRjcrXL6E/maxresdefault.jpg"&gt;
+<a href="https://www.youtube.com/watch?v=KzNRjcrXL6E"&gt;></a>
+<img src="https://img.youtube.com/vi/KzNRjcrXL6E/maxresdefault.jpg"&gt;>
 </a>
 
-<a href="https://www.youtube.com/watch?v=UbRS2iHt-uo"&gt;
-<img src="https://img.youtube.com/vi/UbRS2iHt-uo/maxresdefault.jpg"&gt;
+<a href="https://www.youtube.com/watch?v=UbRS2iHt-uo"&gt;></a>
+<img src="https://img.youtube.com/vi/UbRS2iHt-uo/maxresdefault.jpg"&gt;>
 </a>
 
 </div>
