--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@ Ainda não sabemos qual será o destino do nosso universo, mas a pesquisa contin
 <img src="https://img.youtube.com/vi/E8g2c_bJesA/maxresdefault.jpg"&gt;>
 </a>
 
-<a href="https://www.youtube.com/watch?v=KzNRjcrXL6E"&gt;></a>
-<img src="https://img.youtube.com/vi/KzNRjcrXL6E/maxresdefault.jpg"&gt;>
+<a href="https://www.youtube.com/watch?v=ZWCA8ejKUdA"&gt;></a>
+<img src="https://img.youtube.com/vi/ZWCA8ejKUdA/maxresdefault.jpg"&gt;>
 </a>
 
-<a href="https://www.youtube.com/watch?v=UbRS2iHt-uo"&gt;></a>
-<img src="https://img.youtube.com/vi/UbRS2iHt-uo/maxresdefault.jpg"&gt;>
+<a href="https://www.youtube.com/watch?v=auyuyzx5Urc"&gt;></a>
+<img src="https://img.youtube.com/vi/auyuyzx5Urc/maxresdefault.jpg"&gt;>
 </a>
 
 </div>
